Fixing broken layout on mobile

--- a/app/wp-content/themes/school-self-evaluation/assets/scss/elements/_header.scss
+++ b/app/wp-content/themes/school-self-evaluation/assets/scss/elements/_header.scss
@@ -28,6 +28,7 @@
   margin-bottom: auto;
   margin-left: auto;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .header__social-media,
